# petrofit

./: .gitignore  .readthedocs.yaml  CHANGES.md  CITATION.rst  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.rst  docker.py  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  03-feature-request.yml  config.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ci_tests.yml  main.yml  release.yml  test.yml
.github/workflows/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml
.github/workflows/workflows/: cron.yml  main.yml  test.yml
docs/: api_reference.rst  citing.rst  conf.py  correction_grids.ipynb  fitting.ipynb  fitting_workflow.ipynb  index.rst  installation.rst  introduction.ipynb  multi_object.ipynb  petrosian.ipynb  photometry.ipynb  photometry_and_petrosian.ipynb  quick_start.ipynb  release_procedure.rst
docs/_static/css/: custom.css
docs/data/: abell_2744_cd_galaxy_f105w_photometry.csv  abell_2744_galaxy_f105w_photometry.ecsv  concentration_index_grid_f105w_60mas.yaml  f105w_psf_corr.ecsv  no_psf_corr.ecsv  psf_model_sersic2d_f105w_photometry.csv  sersic2d_photometry.csv
docs/images/: doc_image_gen.ipynb
docs/petrofit/: index.rst
licenses/: LICENSE.rst
petrofit/: __init__.py  _astropy_init.py  conftest.py  correction.py  fitting.py  models.py  petrosian.py  photometry.py  segmentation.py  utils.py
petrofit/fitting/: fitting.py  models.py  utils.py
petrofit/modeling/: __init__.py  fitting.py  models.py
petrofit/modeling/tests/: test_fitting.py
petrofit/petrosian/: __init__.py  core.py  correction.py
petrofit/tests/: concentration_index_grid_no_psf.yaml  conftest.py  test_fitting.py  test_petrosian.py  test_photometry.py  test_segmentation.py  test_utils.py
petrofit/tests/data/: corr.csv
