[metadata]
name = petrofit
author = The PetroFit Team
author_email = 
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/PetroFit/petrofit
description = Petrosian library
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = PetroFit/petrofit

[options]
zip_safe = False
packages = find:
python_requires = >=3.12
setup_requires = setuptools_scm
install_requires =
    Cython
    numpy
    matplotlib
    astropy
    scipy
    pyyaml
    scikit-learn
    scikit-image
    photutils

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx
    sphinx-astropy
    ipykernel
    nbsphinx
    sphinx_rtd_theme
    ipywidgets

[options.package_data]
petrofit = data/*

[tool:pytest]
testpaths = "petrofit" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    petrofit/_astropy_init*
    petrofit/conftest.py
    petrofit/*setup_package*
    petrofit/tests/*
    petrofit/*/tests/*
    petrofit/extern/*
    petrofit/version*
    */petrofit/_astropy_init*
    */petrofit/conftest.py
    */petrofit/*setup_package*
    */petrofit/tests/*
    */petrofit/*/tests/*
    */petrofit/extern/*
    */petrofit/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
